force-app/main/default/objects/Lead/fields/GW_Volunteers__Volunteer_Skills__c.field-meta.xml
<CustomField>
    <fullName>GW_Volunteers__Volunteer_Skills__c</fullName>
    <inlineHelpText>Seleciona la(s) habilidad(es) que tiene esta persona para encontrar un trabajo voluntario</inlineHelpText>
    <label>Volunteer Skills</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Computer usage</fullName>
            </value>
            <value>
                <fullName>Manual labor</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Fundraising</fullName>
            </value>
            <value>
                <fullName>Event Planning</fullName>
            </value>
            <value>
                <fullName>Landscaping</fullName>
            </value>
            <value>
                <fullName>Control de acceso</fullName>
            </value>
            <value>
                <fullName>Voto electrónico</fullName>
            </value>
            <value>
                <fullName>Fotografía/Multimedia</fullName>
            </value>
            <value>
                <fullName>Logística (montaje, micros, etc)</fullName>
            </value>
            <value>
                <fullName>NS workshop</fullName>
            </value>
            <value>
                <fullName>Otros (finanzas, documentación, etc)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>