force-app/main/default/objects/Lead/fields/msf_acceptDataProtectionPolicy__c.field-meta.xml
<CustomField>
    <fullName>msf_acceptDataProtectionPolicy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Política protección de datos</label>
    <type>Checkbox</type>
</CustomField>