force-app/main/default/objects/Lead/fields/msf_AccountHolderOption__c.field-meta.xml
<CustomField>
    <fullName>msf_AccountHolderOption__c</fullName>
    <label>Opción titular cuenta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>