force-app/main/default/objects/Lead/fields/msf_AssociativePhone__c.field-meta.xml
<CustomField>
    <fullName>msf_AssociativePhone__c</fullName>
    <label>Teléfono de asociativo</label>
    <type>Phone</type>
</CustomField>