force-app/main/default/objects/Lead/fields/msf_AuxFirstName__c.field-meta.xml
<CustomField>
    <fullName>msf_AuxFirstName__c</fullName>
    <label>Nombre (Tutor/Representante)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>