force-app/main/default/objects/Lead/fields/msf_AuxLastName__c.field-meta.xml
<CustomField>
    <fullName>msf_AuxLastName__c</fullName>
    <label>Apellido 1 (Tutor/Representante)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>