force-app/main/default/objects/Lead/fields/msf_AuxMobilePhone__c.field-meta.xml
<CustomField>
    <fullName>msf_AuxMobilePhone__c</fullName>
    <label>Teléfono móvil (Representante)</label>
    <type>Phone</type>
</CustomField>