force-app/main/default/objects/Lead/fields/msf_AuxNIF__c.field-meta.xml
<CustomField>
    <fullName>msf_AuxNIF__c</fullName>
    <label>NIF/NIE (Tutor/Representante)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>