force-app/main/default/objects/Lead/fields/msf_AuxRole__c.field-meta.xml
<CustomField>
    <fullName>msf_AuxRole__c</fullName>
    <label>Rol (Representante)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>