force-app/main/default/objects/Lead/fields/msf_AuxSuffix__c.field-meta.xml
<CustomField>
    <fullName>msf_AuxSuffix__c</fullName>
    <label>Apellido 2 (Tutor/Representante)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>