force-app/main/default/objects/Lead/fields/msf_Birthdate__c.field-meta.xml
<CustomField>
    <fullName>msf_Birthdate__c</fullName>
    <label>Fecha de nacimiento</label>
    <type>Date</type>
</CustomField>