force-app/main/default/objects/Lead/fields/msf_CanvasserCampaign__c.field-meta.xml
<CustomField>
    <fullName>msf_CanvasserCampaign__c</fullName>
    <label>Campaña captador</label>
    <length>255</length>
    <type>Text</type>
</CustomField>