force-app/main/default/objects/Lead/fields/msf_ContactDate__c.field-meta.xml
<CustomField>
    <fullName>msf_ContactDate__c</fullName>
    <label>Fecha a contactar</label>
    <type>DateTime</type>
</CustomField>