force-app/main/default/objects/Lead/fields/msf_dateReceivedSMS__c.field-meta.xml
<CustomField>
    <fullName>msf_dateReceivedSMS__c</fullName>
    <label>msf_dateReceivedSMS</label>
    <type>DateTime</type>
</CustomField>