force-app/main/default/objects/Lead/fields/msf_DoNotCall__c.field-meta.xml
<CustomField>
    <fullName>msf_DoNotCall__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No llamar</label>
    <type>Checkbox</type>
</CustomField>