force-app/main/default/objects/Lead/fields/msf_DoNotContact__c.field-meta.xml
<CustomField>
    <fullName>msf_DoNotContact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No contactar</label>
    <type>Checkbox</type>
</CustomField>