force-app/main/default/objects/Lead/fields/msf_DoorNumber__c.field-meta.xml
<CustomField>
    <fullName>msf_DoorNumber__c</fullName>
    <label>Puerta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>