force-app/main/default/objects/Lead/fields/msf_EndorsedByTwo__c.field-meta.xml
<CustomField>
    <fullName>msf_EndorsedByTwo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Avalado por (2)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.msf_IsAssosiative__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Candidatos (Avalado por)</relationshipLabel>
    <relationshipName>Avalado2</relationshipName>
    <type>Lookup</type>
</CustomField>