force-app/main/default/objects/Lead/fields/msf_EntryCampaign__c.field-meta.xml
<CustomField>
    <fullName>msf_EntryCampaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaña de entrada inicial</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Candidatos</relationshipLabel>
    <relationshipName>Candidatos</relationshipName>
    <type>Lookup</type>
</CustomField>