force-app/main/default/objects/Lead/fields/msf_esOrganizacion__c.field-meta.xml
<CustomField>
    <fullName>msf_esOrganizacion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Es organización</label>
    <type>Checkbox</type>
</CustomField>