force-app/main/default/objects/Lead/fields/msf_ExemptOfPayment__c.field-meta.xml
<CustomField>
    <fullName>msf_ExemptOfPayment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exento de pago</label>
    <type>Checkbox</type>
</CustomField>