force-app/main/default/objects/Lead/fields/msf_Fax__c.field-meta.xml
<CustomField>
    <fullName>msf_Fax__c</fullName>
    <label>FAX</label>
    <type>Phone</type>
</CustomField>