force-app/main/default/objects/Lead/fields/msf_FirmaDonante__c.field-meta.xml
<CustomField>
    <fullName>msf_FirmaDonante__c</fullName>
    <defaultValue>false</defaultValue>
    <label>msf_FirmaDonante</label>
    <type>Checkbox</type>
</CustomField>