force-app/main/default/objects/Lead/fields/msf_FirmaRepresentante__c.field-meta.xml
<CustomField>
    <fullName>msf_FirmaRepresentante__c</fullName>
    <defaultValue>false</defaultValue>
    <label>msf_FirmaRepresentante</label>
    <type>Checkbox</type>
</CustomField>