force-app/main/default/objects/Lead/fields/msf_FirmaTitular__c.field-meta.xml
<CustomField>
    <fullName>msf_FirmaTitular__c</fullName>
    <defaultValue>false</defaultValue>
    <label>msf_FirmaTitular</label>
    <type>Checkbox</type>
</CustomField>