force-app/main/default/objects/Lead/fields/msf_Floor__c.field-meta.xml
<CustomField>
    <fullName>msf_Floor__c</fullName>
    <label>Piso</label>
    <length>255</length>
    <type>Text</type>
</CustomField>