force-app/main/default/objects/Lead/fields/msf_HolderFirstName__c.field-meta.xml
<CustomField>
    <fullName>msf_HolderFirstName__c</fullName>
    <label>Nombre (Titular)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>