force-app/main/default/objects/Lead/fields/msf_HolderLastName__c.field-meta.xml
<CustomField>
    <fullName>msf_HolderLastName__c</fullName>
    <label>Apellido 1 (Titular)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>