force-app/main/default/objects/Lead/fields/msf_HolderNIF__c.field-meta.xml
<CustomField>
    <fullName>msf_HolderNIF__c</fullName>
    <label>NIF/NIE (Titular)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>