force-app/main/default/objects/Lead/fields/msf_HolderSuffixName__c.field-meta.xml
<CustomField>
    <fullName>msf_HolderSuffixName__c</fullName>
    <label>Apellido 2 (Titular)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>