force-app/main/default/objects/Lead/fields/msf_IBANAccountNumber__c.field-meta.xml
<CustomField>
    <fullName>msf_IBANAccountNumber__c</fullName>
    <label>Número de cuenta</label>
    <length>10</length>
    <type>Text</type>
</CustomField>