force-app/main/default/objects/Lead/fields/msf_IBANCode__c.field-meta.xml
<CustomField>
    <fullName>msf_IBANCode__c</fullName>
    <label>Código IBAN</label>
    <length>4</length>
    <type>Text</type>
</CustomField>