force-app/main/default/objects/Lead/fields/msf_IBANDC__c.field-meta.xml
<CustomField>
    <fullName>msf_IBANDC__c</fullName>
    <label>Dígito de control</label>
    <length>2</length>
    <type>Text</type>
</CustomField>