force-app/main/default/objects/Lead/fields/msf_IBANEntity__c.field-meta.xml
<CustomField>
    <fullName>msf_IBANEntity__c</fullName>
    <label>Entidad</label>
    <length>4</length>
    <type>Text</type>
</CustomField>