force-app/main/default/objects/Lead/fields/msf_IBANOffice__c.field-meta.xml
<CustomField>
    <fullName>msf_IBANOffice__c</fullName>
    <label>Oficina</label>
    <length>4</length>
    <type>Text</type>
</CustomField>