force-app/main/default/objects/Lead/fields/msf_Isla__c.field-meta.xml
<CustomField>
    <fullName>msf_Isla__c</fullName>
    <label>Isla</label>
    <length>255</length>
    <type>Text</type>
</CustomField>