force-app/main/default/objects/Lead/fields/msf_isNationalStaff__c.field-meta.xml
<CustomField>
    <fullName>msf_isNationalStaff__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Personal de sede o nacional</label>
    <type>Checkbox</type>
</CustomField>