force-app/main/default/objects/Lead/fields/msf_isSanitary__c.field-meta.xml
<CustomField>
    <fullName>msf_isSanitary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Personal sanitario</label>
    <type>Checkbox</type>
</CustomField>