force-app/main/default/objects/Lead/fields/msf_IsWorkedMSF__c.field-meta.xml
<CustomField>
    <fullName>msf_IsWorkedMSF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ha trabajado en MSF</label>
    <type>Checkbox</type>
</CustomField>