force-app/main/default/objects/Lead/fields/msf_LanguagePreferer__c.field-meta.xml
<CustomField>
    <fullName>msf_LanguagePreferer__c</fullName>
    <label>Idioma de Preferencia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CAT</fullName>
            </value>
            <value>
                <fullName>ESP</fullName>
            </value>
            <value>
                <fullName>GAL</fullName>
            </value>
            <value>
                <fullName>EUS</fullName>
            </value>
            <value>
                <fullName>ES</fullName>
            </value>
            <value>
                <fullName>EN</fullName>
            </value>
            <value>
                <fullName>FR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>