force-app/main/default/objects/Lead/fields/msf_MoreInfo__c.field-meta.xml
<CustomField>
    <fullName>msf_MoreInfo__c</fullName>
    <label>Más información</label>
    <type>TextArea</type>
</CustomField>