force-app/main/default/objects/Lead/fields/msf_NIF__c.field-meta.xml
<CustomField>
    <fullName>msf_NIF__c</fullName>
    <description>VAT Number</description>
    <label>NIF/NIE/CIF</label>
    <length>20</length>
    <type>Text</type>
</CustomField>