force-app/main/default/objects/Lead/fields/msf_noCriminalRecord__c.field-meta.xml
<CustomField>
    <fullName>msf_noCriminalRecord__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No antecedentes penales</label>
    <type>Checkbox</type>
</CustomField>