force-app/main/default/objects/Lead/fields/msf_NoEspMobilePhone__c.field-meta.xml
<CustomField>
    <fullName>msf_NoEspMobilePhone__c</fullName>
    <label>Móvil no Español</label>
    <type>Phone</type>
</CustomField>