force-app/main/default/objects/Lead/fields/msf_NotInformedAmount__c.field-meta.xml
<CustomField>
    <fullName>msf_NotInformedAmount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Monto no informado</label>
    <type>Checkbox</type>
</CustomField>