force-app/main/default/objects/Lead/fields/msf_Opp_npe03_Amount__c.field-meta.xml
<CustomField>
    <fullName>msf_Opp_npe03_Amount__c</fullName>
    <description>amount sms</description>
    <label>Importe</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>