force-app/main/default/objects/Lead/fields/msf_OtherEmail__c.field-meta.xml
<CustomField>
    <fullName>msf_OtherEmail__c</fullName>
    <label>Correo electrónico asociativo</label>
    <type>Email</type>
</CustomField>