force-app/main/default/objects/Lead/fields/msf_OtherPhone__c.field-meta.xml
<CustomField>
    <fullName>msf_OtherPhone__c</fullName>
    <label>Otro teléfono</label>
    <type>Phone</type>
</CustomField>