force-app/main/default/objects/Lead/fields/msf_Passport__c.field-meta.xml
<CustomField>
    <fullName>msf_Passport__c</fullName>
    <label>Pasaporte</label>
    <length>255</length>
    <type>Text</type>
</CustomField>