force-app/main/default/objects/Lead/fields/msf_PaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>msf_PaymentMethod__c</fullName>
    <label>Método de pago</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>msf_ExemptOfPayment__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Domiciliación bancaria</fullName>
            </value>
            <value>
                <fullName>Tarjeta de crédito o débito</fullName>
            </value>
            <value>
                <fullName>ACMA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>