force-app/main/default/objects/Lead/fields/msf_RecDon_npe03_Installment_Period__c.field-meta.xml
<CustomField>
    <fullName>msf_RecDon_npe03_Installment_Period__c</fullName>
    <description>How often you’ll receive the donations. NOTE: Changing the installment period for an existing Fixed-Length Recurring Donation may result in the loss and re-creation of open opportunities. Any data associated with those opportunities may be lost.</description>
    <label>Periodicidad</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Yearly</fullName>
            </value>
            <value>
                <fullName>Bimensual</fullName>
            </value>
            <value>
                <fullName>Semestral</fullName>
            </value>
            <value>
                <fullName>Unique</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>