force-app/main/default/objects/Lead/fields/msf_RecDona_npe03_Next_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>msf_RecDona_npe03_Next_Payment_Date__c</fullName>
    <defaultValue>DATE(YEAR(ADDMONTHS(TODAY(),1)),MONTH(ADDMONTHS(TODAY(),1)),1)</defaultValue>
    <description>next donation date</description>
    <label>Próxima fecha de pago</label>
    <type>Date</type>
</CustomField>