force-app/main/default/objects/Lead/fields/msf_ReceiveEmailCommunications__c.field-meta.xml
<CustomField>
    <fullName>msf_ReceiveEmailCommunications__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Recibir comunicaciones por email</label>
    <type>Checkbox</type>
</CustomField>