force-app/main/default/objects/Lead/fields/msf_SMSExternalId__c.field-meta.xml
<CustomField>
    <fullName>msf_SMSExternalId__c</fullName>
    <externalId>true</externalId>
    <label>Id externo SMS</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>