force-app/main/default/objects/Lead/fields/msf_StaffType__c.field-meta.xml
<CustomField>
    <fullName>msf_StaffType__c</fullName>
    <label>Tipo de personal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internacional</fullName>
            </value>
            <value>
                <fullName>Sede o delegaciones</fullName>
            </value>
            <value>
                <fullName>Nacional</fullName>
            </value>
            <value>
                <fullName>Otros MSF</fullName>
            </value>
            <value>
                <fullName>Voluntario</fullName>
                <isActive>false</isActive>
                <label>Voluntario</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>