force-app/main/default/objects/Lead/fields/msf_Status__c.field-meta.xml
<CustomField>
    <fullName>msf_Status__c</fullName>
    <label>Estado candidato</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pool Asociativo</fullName>
            </value>
            <value>
                <fullName>Solicita información Asociativo</fullName>
            </value>
            <value>
                <fullName>Formulario incompleto</fullName>
            </value>
            <value>
                <fullName>Pendiente de presentar</fullName>
            </value>
            <value>
                <fullName>Pendiente de aprobar</fullName>
            </value>
            <value>
                <fullName>Asociado Stand-by</fullName>
                <isActive>false</isActive>
                <label>Asociado Stand-by</label>
            </value>
            <value>
                <fullName>Solicitud de alta</fullName>
                <isActive>false</isActive>
                <label>Solicitud de alta</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>