force-app/main/default/objects/Lead/fields/msf_StreetNumber__c.field-meta.xml
<CustomField>
    <fullName>msf_StreetNumber__c</fullName>
    <label>Número</label>
    <length>255</length>
    <type>Text</type>
</CustomField>