force-app/main/default/objects/Lead/fields/msf_TrainingOrStudies__c.field-meta.xml
<CustomField>
    <fullName>msf_TrainingOrStudies__c</fullName>
    <label>Formación / Estudios</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>