force-app/main/default/objects/Lead/fields/npsp__Batch__c.field-meta.xml
<CustomField>
    <fullName>npsp__Batch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>El lote donde fue creado este candidato</inlineHelpText>
    <label>Batch</label>
    <referenceTo>npsp__Batch__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>