force-app/main/default/objects/Lead/fields/smartystreets__Address_Footnotes__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__Address_Footnotes__c</fullName>
    <inlineHelpText>Notes about the verification process</inlineHelpText>
    <label>Address Footnotes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>