force-app/main/default/objects/Lead/fields/smartystreets__Address_Longitude__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__Address_Longitude__c</fullName>
    <description>Longitude for the Geo-Coded, Verified Address</description>
    <inlineHelpText>Longitude for the Geo-Coded, Verified Address</inlineHelpText>
    <label>Address Longitude</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>