force-app/main/default/objects/Lead/fields/smartystreets__Address_Status__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__Address_Status__c</fullName>
    <description>Shows return code plus icon</description>
    <formula>If(smartystreets__Address_Return_Code__c = &quot;Confirmed&quot;, IMAGE(&quot;/img/msg_icons/confirm16.png&quot;, &quot;Confirmed&quot;, 16, 16) &amp; &quot; Confirmed&quot;, 
If(smartystreets__Address_Return_Code__c = &quot;Partial&quot;, IMAGE(&quot;/img/msg_icons/warning16.png&quot;, &quot;Confirmed - Partially&quot;, 16, 16) &amp; &quot; Confirmed - Partially&quot;, 
If(left(smartystreets__Address_Return_Code__c,9) = &quot;Confirmed&quot;, IMAGE(&quot;/img/msg_icons/warning16.png&quot;, smartystreets__Address_Return_Code__c, 16, 16) &amp; &quot; &quot; &amp; smartystreets__Address_Return_Code__c, 
If(smartystreets__Address_Return_Code__c = &quot;Bad or Blank Address&quot;, IMAGE(&quot;/img/msg_icons/error16.png&quot;, &quot;Blank Address&quot;, 16, 16) &amp; &quot; Bad or Blank Address&quot;, 
If(smartystreets__Address_Return_Code__c = &quot;Not Submitted&quot;, IMAGE(&quot;/img/msg_icons/error16.png&quot;, &quot;Not Submitted&quot;, 16, 16) &amp; &quot; Not Submitted&quot;, 
If(smartystreets__Address_Return_Code__c = &quot;Not Confirmed&quot;, IMAGE(&quot;/img/msg_icons/error16.png&quot;, &quot;Not Confirmed&quot;, 16, 16) &amp; &quot; Not Confirmed&quot;, IMAGE(&quot;/img/msg_icons/info16.png&quot;, &quot;Not Yet Verified&quot;, 16, 16) &amp; &quot; Not Yet Verified&quot;))))))</formula>
    <inlineHelpText>Confirmed
Not Confirmed
Confirmed - By Dropping Secondary Info
Confirmed - Missing Secondary Info
Confirmed - May be Undeliverable
Not Submitted</inlineHelpText>
    <label>Address Status</label>
    <type>Text</type>
</CustomField>