force-app/main/default/objects/Lead/fields/smartystreets__Address_Verified__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__Address_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Has this address been verified?</inlineHelpText>
    <label>Address Verified</label>
    <type>Checkbox</type>
</CustomField>