force-app/main/default/objects/Lead/fields/smartystreets__Clean_Street__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__Clean_Street__c</fullName>
    <inlineHelpText>Standardized street address, used for matching for existing verified records</inlineHelpText>
    <label>Clean Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>