force-app/main/default/objects/Lead/recordTypes/Associative.recordType-meta.xml
<RecordType>
    <fullName>Associative</fullName>
    <active>true</active>
    <businessProcess>Associative Lead</businessProcess>
    <label>Associative</label>
</RecordType>