force-app/main/default/objects/Lead/recordTypes/Individual.recordType-meta.xml
<RecordType>
    <fullName>Individual</fullName>
    <active>true</active>
    <businessProcess>Individual Lead</businessProcess>
    <label>Individual</label>
</RecordType>