force-app/main/default/objects/Lead/validationRules/Asociativo_incompleto_antecedentes.validationRule-meta.xml
<ValidationRule>
    <fullName>Asociativo_incompleto_antecedentes</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
  RecordType.DeveloperName == &apos;Associative&apos;,
  (ISPICKVAL(msf_Status__c , &apos;Pendiente de aprobar&apos;) || ISPICKVAL(msf_Status__c , &apos;Pendiente de presentar&apos;)), 
  !msf_noCriminalRecord__c  
)</errorConditionFormula>
    <errorDisplayField>msf_noCriminalRecord__c</errorDisplayField>
    <errorMessage>Campo obligatorio para completar el formulario.</errorMessage>
</ValidationRule>