force-app/main/default/objects/Lead/validationRules/Asociativo_incompleto_apellido1.validationRule-meta.xml
<ValidationRule>
    <fullName>Asociativo_incompleto_apellido1</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
  RecordType.DeveloperName == &apos;Associative&apos;,
  (ISPICKVAL(msf_Status__c , &apos;Pendiente de aprobar&apos;) || ISPICKVAL(msf_Status__c , &apos;Pendiente de presentar&apos;)), 
  ISBLANK( LastName )
)</errorConditionFormula>
    <errorDisplayField>LastName</errorDisplayField>
    <errorMessage>Campo obligatorio para completar el formulario.</errorMessage>
</ValidationRule>